// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshots Video facebook 1`] = `
<styled.article>
  <styled.div>
    facebook based video
  </styled.div>
  <Views
    count={56789}
  />
</styled.article>
`;

exports[`snapshots Video url 1`] = `
<styled.article>
  <styled.div>
    url based video
  </styled.div>
  <Views
    count={3445}
  />
  <Url
    src="http://g.com/1.mp4"
  />
</styled.article>
`;

exports[`snapshots Video youtube 1`] = `
<styled.article>
  <styled.div>
    youtube based video
  </styled.div>
  <Views
    count={214526}
  />
</styled.article>
`;
